[gd_scene load_steps=23 format=3 uid="uid://cd5yoh7xcw66i"]

[ext_resource type="Script" uid="uid://cv63ch3yrgvar" path="res://objects/upgrades/continue_sign.gd" id="1_l40if"]
[ext_resource type="Script" uid="uid://b0bn33ouc8kb" path="res://scenes/main_menu/border.gd" id="2_l40if"]
[ext_resource type="Script" uid="uid://eg8ymx01ost6" path="res://scenes/main_menu/buttons/button.gd" id="3_sbqd8"]
[ext_resource type="FontFile" uid="uid://cckal1yyictr5" path="res://assets/fonts/Rubik/static/Rubik-Italic.ttf" id="4_yfr2l"]
[ext_resource type="FontFile" uid="uid://huci6pay5tuq" path="res://assets/fonts/Rubik/static/Rubik-BoldItalic.ttf" id="5_l40if"]
[ext_resource type="AudioStream" uid="uid://ce4wcvcaioycm" path="res://assets/sfx/ui/button_hover.wav" id="5_yfr2l"]
[ext_resource type="AudioStream" uid="uid://bd265nwamr6bq" path="res://assets/sfx/ui/button_press.wav" id="6_m81wb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8jqgk"]
radius = 40.0

[sub_resource type="Animation" id="Animation_36tnm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:border_width")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:width")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:height")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:pos_x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_xll01"]
resource_name = "open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:border_width")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.0980732, 1),
"update": 0,
"values": [0.0, 4.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:width")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(-4.92458, 1),
"update": 0,
"values": [0.0, 200.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:height")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.148651, 1),
"update": 0,
"values": [0.0, 120.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:pos_x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(-4.92458, 1),
"update": 0,
"values": [0.0, -100.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8c0l6"]
_data = {
&"RESET": SubResource("Animation_36tnm"),
&"open": SubResource("Animation_xll01")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xll01"]
bg_color = Color(0.290196, 0.890196, 0.74902, 1)
skew = Vector2(0.2, 0)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
anti_aliasing = false

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_je1g1"]
random_pitch = 1.05
random_volume_offset_db = 5.0
streams_count = 1
stream_0/stream = ExtResource("5_yfr2l")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_cvw0t"]
random_pitch = 1.05
random_volume_offset_db = 3.0
streams_count = 1
stream_0/stream = ExtResource("6_m81wb")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l40if"]
bg_color = Color(0.964706, 0.984314, 0.85098, 1)
skew = Vector2(0.2, 0)
border_color = Color(0.909804, 0.917647, 0.376471, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
anti_aliasing = false

[sub_resource type="LabelSettings" id="LabelSettings_l40if"]
line_spacing = -3.0
font = ExtResource("5_l40if")
font_size = 8
font_color = Color(0.117647, 0.101961, 0.12549, 1)

[sub_resource type="Animation" id="Animation_sbqd8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node2D/ColorRect2:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_l40if"]
resource_name = "spawn"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(-3.73213, 1),
"update": 0,
"values": [Vector2(0, 1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node2D/ColorRect2:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(-3.73213, 1),
"update": 0,
"values": [-0.167552, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yfr2l"]
_data = {
&"RESET": SubResource("Animation_sbqd8"),
&"spawn": SubResource("Animation_l40if")
}

[sub_resource type="Animation" id="Animation_m81wb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_yfr2l"]
resource_name = "sway"
length = 4.0
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 4),
"transitions": PackedFloat32Array(-2, -2, 1),
"update": 0,
"values": [-0.0872665, 0.0872665, -0.0872665]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_je1g1"]
_data = {
&"RESET": SubResource("Animation_m81wb"),
&"sway": SubResource("Animation_yfr2l")
}

[node name="Area2D" type="Area2D"]
z_index = -1
script = ExtResource("1_l40if")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_8jqgk")

[node name="ReferenceRect" type="ReferenceRect" parent="."]
visible = false
z_index = 49
offset_top = 128.0
offset_bottom = 128.0
border_color = Color(0.964706, 0.984314, 0.85098, 1)
border_width = 0.0
editor_only = false
script = ExtResource("2_l40if")
pos_y = 128.0

[node name="Hover" type="AnimationPlayer" parent="ReferenceRect"]
libraries = {
&"": SubResource("AnimationLibrary_8c0l6")
}

[node name="ColorRect" type="ColorRect" parent="ReferenceRect"]
show_behind_parent = true
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.117647, 0.101961, 0.12549, 1)

[node name="MarginContainer" type="MarginContainer" parent="ReferenceRect/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="ReferenceRect/ColorRect/MarginContainer"]
layout_mode = 2

[node name="TitleDesc" type="RichTextLabel" parent="ReferenceRect/ColorRect/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(192, 0)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 10
theme_override_font_sizes/bold_font_size = 12
bbcode_enabled = true
text = "[b]Leave shop?[/b]
+%d nodes."
fit_content = true
scroll_active = false

[node name="Purchase" type="Button" parent="ReferenceRect/ColorRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(68, 16)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
script = ExtResource("3_sbqd8")
do_start_anim = true

[node name="Label" type="Label" parent="ReferenceRect/ColorRect/MarginContainer/VBoxContainer/Purchase"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_yfr2l")
theme_override_font_sizes/font_size = 12
text = "> Continue"

[node name="ColorRect" type="Panel" parent="ReferenceRect/ColorRect/MarginContainer/VBoxContainer/Purchase/Label"]
clip_children = 2
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2
mouse_filter = 2
theme_type_variation = &"ButtonPanel"
theme_override_styles/panel = SubResource("StyleBoxFlat_xll01")

[node name="Label" type="Label" parent="ReferenceRect/ColorRect/MarginContainer/VBoxContainer/Purchase/Label/ColorRect"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 107.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.117647, 0.101961, 0.12549, 1)
theme_override_fonts/font = ExtResource("4_yfr2l")
theme_override_font_sizes/font_size = 12
text = "> Continue"

[node name="Hover" type="AudioStreamPlayer" parent="ReferenceRect/ColorRect/MarginContainer/VBoxContainer/Purchase"]
stream = SubResource("AudioStreamRandomizer_je1g1")
pitch_scale = 0.98

[node name="Press" type="AudioStreamPlayer" parent="ReferenceRect/ColorRect/MarginContainer/VBoxContainer/Purchase"]
stream = SubResource("AudioStreamRandomizer_cvw0t")

[node name="Node2D" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Node2D"]
offset_left = -2.0
offset_top = -8.0
offset_right = 2.0
color = Color(0.184314, 0.141176, 0.203922, 1)

[node name="ColorRect9" type="ColorRect" parent="Node2D"]
offset_left = -2.0
offset_top = -29.0
offset_right = 2.0
offset_bottom = -28.0
color = Color(0.184314, 0.141176, 0.203922, 1)

[node name="ColorRect2" type="Panel" parent="Node2D"]
offset_left = -16.0
offset_top = -27.0
offset_right = 16.0
offset_bottom = -9.0
pivot_offset = Vector2(16, 9)
theme_override_styles/panel = SubResource("StyleBoxFlat_l40if")

[node name="Label" type="Label" parent="Node2D/ColorRect2"]
layout_mode = 0
offset_right = 32.0
offset_bottom = 18.0
theme_override_colors/font_color = Color(0.117647, 0.101961, 0.12549, 1)
theme_override_fonts/font = ExtResource("5_l40if")
theme_override_font_sizes/font_size = 8
text = "leave
shop"
label_settings = SubResource("LabelSettings_l40if")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spawn" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_yfr2l")
}
autoplay = "spawn"

[node name="Sway" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_je1g1")
}
autoplay = "sway"

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="pressed" from="ReferenceRect/ColorRect/MarginContainer/VBoxContainer/Purchase" to="." method="_on_purchase_pressed"]
